Prueba, repositorio compartido

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <template id="card-temp">
     <div class="card">
-      <img src="" alt="" class="card-img">
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="" class="card-img">
       <div class="des-cont">
         <h3 class="card-title"></h3>
         <p class="card-text"></p>
@@ -50,11 +50,6 @@
   </template>
 
   <main id="card-cont">
-    <form class="fil-form">
-      <input type="text" name="filter" id="filter" class="fil-box" placeholder="Filtro" required>
-      <button id="fil-btn" class="fil-btn">Filtrar</button>
-    </form>
-
     <!-- Imágen de ejemplo -->
     <div class="card">
       <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="" class="card-img">
@@ -65,6 +60,11 @@
         <button id="del-btn" class="del-btn">Eliminar</button>
       </div>
     </div>
+
+    <form class="fil-form">
+      <input type="text" name="filter" id="filter" class="fil-box" placeholder="Filtro" required>
+      <button id="fil-btn" class="fil-btn">Filtrar</button>
+    </form>
 
   </main>
 
