--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   </main>
 
-  <script src="src/scripts/index.js"></script>
+  <script src="src/scripts/index.js" type="module"></script>
 </body>
 
 </html>
