Estilos css casi terminados

--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
       <div class="des-cont">
         <h3 class="card-title">bulbasaur</h3>
         <p class="card-text">grass</p>
-        <button id="ed-btn" class="ed-btn">Editar</button>
-        <button id="del-btn" class="del-btn">Eliminar</button>
+        <button id="ed-btn" class="card-btn">Editar</button>
+        <button id="del-btn" class="card-btn">Eliminar</button>
       </div>
     </div>
+    
+    
 
   </main>
 
