--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <input type="text" name="image" id="image" class="text-box" placeholder="URL" required>
       </label>
       <label for="poke-type" class="label">Tipo de pokemon
-        <input type="text" name="poke-type" id="poke-type" class="text-box" placeholder="Tipo" required>
+        <input type="text" name="pokeType" id="pokeType" class="text-box" placeholder="Tipo" required>
       </label>
-      <button id="add-ed-btn" class="btn">Agregar</button>
+      <button type="submit" id="main-btn" class="btn">Agregar</button>
 
     </form>
   </aside>
@@ -43,8 +43,8 @@
       <div class="des-cont">
         <h3 class="card-title"></h3>
         <p class="card-text"></p>
-        <button id="ed-btn" class="ed-btn"></button>
-        <button id="del-btn" class="del-btn"></button>
+        <button class="ed-btn" value="edit">Edit</button>
+        <button class="del-btn" value="delete">Delete</button>
       </div>
     </div>
   </template>
@@ -56,7 +56,7 @@
     </form>
 
     <!-- Imágen de ejemplo -->
-    <div class="card">
+    <!-- <div class="card">
       <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="" class="card-img">
       <div class="des-cont">
         <h3 class="card-title">bulbasaur</h3>
@@ -64,7 +64,7 @@
         <button id="ed-btn" class="ed-btn">Editar</button>
         <button id="del-btn" class="del-btn">Eliminar</button>
       </div>
-    </div>
+    </div> -->
 
   </main>
 
