Acutalización final, estilos css

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 <body>
   <header>
     <div class="title-cont">
-      <h1 class="main-title">Aqui va el título</h1>
+      <h1 class="main-title">PokeShop</h1>
     </div>
   </header>
 
   <aside class="form-cont">
-    <form class="main-form">
+    <button class="mainmenubtn">Formulario</button>
 
+    <form class="main-form">
       <div class="form-title-cont">
         <h2 class="form-title">Agregar</h2>
       </div>
@@ -63,8 +64,8 @@
      <div class="card">
       <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="" class="card-img">
       <div class="des-cont">
-        <h3 class="card-title">bulbasaur</h3>
-        <p class="card-text">grass</p>
+        <h3 class="card-title">Bulbasaur</h3>
+        <p class="card-text">Grass</p>
         <button id="ed-btn" class="card-btn">Editar</button>
         <button id="del-btn" class="card-btn">Eliminar</button>
       </div>
@@ -73,8 +74,8 @@
     <div class="card">
       <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="" class="card-img">
       <div class="des-cont">
-        <h3 class="card-title">bulbasaur</h3>
-        <p class="card-text">grass</p>
+        <h3 class="card-title">Bulbasaur</h3>
+        <p class="card-text">Grass</p>
         <button id="ed-btn" class="card-btn">Editar</button>
         <button id="del-btn" class="card-btn">Eliminar</button>
       </div>
@@ -83,8 +84,88 @@
     <div class="card">
       <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="" class="card-img">
       <div class="des-cont">
-        <h3 class="card-title">bulbasaur</h3>
-        <p class="card-text">grass</p>
+        <h3 class="card-title">Bulbasaur</h3>
+        <p class="card-text">Grass</p>
+        <button id="ed-btn" class="card-btn">Editar</button>
+        <button id="del-btn" class="card-btn">Eliminar</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="" class="card-img">
+      <div class="des-cont">
+        <h3 class="card-title">Bulbasaur</h3>
+        <p class="card-text">Grass</p>
+        <button id="ed-btn" class="card-btn">Editar</button>
+        <button id="del-btn" class="card-btn">Eliminar</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="" class="card-img">
+      <div class="des-cont">
+        <h3 class="card-title">Bulbasaur</h3>
+        <p class="card-text">Grass</p>
+        <button id="ed-btn" class="card-btn">Editar</button>
+        <button id="del-btn" class="card-btn">Eliminar</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="" class="card-img">
+      <div class="des-cont">
+        <h3 class="card-title">Bulbasaur</h3>
+        <p class="card-text">Grass</p>
+        <button id="ed-btn" class="card-btn">Editar</button>
+        <button id="del-btn" class="card-btn">Eliminar</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="" class="card-img">
+      <div class="des-cont">
+        <h3 class="card-title">Bulbasaur</h3>
+        <p class="card-text">Grass</p>
+        <button id="ed-btn" class="card-btn">Editar</button>
+        <button id="del-btn" class="card-btn">Eliminar</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="" class="card-img">
+      <div class="des-cont">
+        <h3 class="card-title">Bulbasaur</h3>
+        <p class="card-text">Grass</p>
+        <button id="ed-btn" class="card-btn">Editar</button>
+        <button id="del-btn" class="card-btn">Eliminar</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="" class="card-img">
+      <div class="des-cont">
+        <h3 class="card-title">Bulbasaur</h3>
+        <p class="card-text">Grass</p>
+        <button id="ed-btn" class="card-btn">Editar</button>
+        <button id="del-btn" class="card-btn">Eliminar</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="" class="card-img">
+      <div class="des-cont">
+        <h3 class="card-title">Bulbasaur</h3>
+        <p class="card-text">Grass</p>
+        <button id="ed-btn" class="card-btn">Editar</button>
+        <button id="del-btn" class="card-btn">Eliminar</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="" class="card-img">
+      <div class="des-cont">
+        <h3 class="card-title">Bulbasaur</h3>
+        <p class="card-text">Grass</p>
         <button id="ed-btn" class="card-btn">Editar</button>
         <button id="del-btn" class="card-btn">Eliminar</button>
       </div>
